--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,21 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/public/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <nav><a href="/">HOME</a></nav>
+    <nav>
+        <a href="/places" <%- title === 'All Places' ? 'class="active"' : '' %>>ALL PLACES</a>
+        <% if (user) { %>
+          <a href="/restaurants/new"	<%- title === 'New Restaurant ' ? 'class="active"' : '' %>>
+          NEW RESTAURANT</a>
+          <a href="/places/new" <%- title === 'New Place' ? 'class="active"' : '' %>>NEW PLACE</a>
+          <a href="/logout">LOG OUT</a>
+        <% } else { %>
+          <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <% } %>
+      </nav>
+      <main>
+    
+    <h2>Welcome to Journey Of Istanbul</h2>
+    
