--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body>  
     <nav>
         <a href="/places" <%- title === 'All Places' ? 'class="active"' : '' %>>ALL PLACES</a>
         <% if (user) { %>
@@ -17,6 +17,5 @@
         <% } %>
       </nav>
       <main>
-    
-    <h2>Welcome to Journey Of Istanbul</h2>
+    <h2 id="Istanbul">Welcome to Journey To Istanbul</h2>
     
