--- a/views/places/index.ejs
+++ b/views/places/index.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/header') %>
+<div class=index>
 <h3>List Of Places</h3>
 <table id="list">
     <thead>
@@ -18,5 +19,5 @@
       <% }); %>
     <t/body>
     </table>
-
+</div>
 <%- include('../partials/footer') %>
