--- a/views/places/new.ejs
+++ b/views/places/new.ejs
@@ -6,10 +6,8 @@
     <input type="text" name="name">
     <label>Where:</label>
     <input type="text" name="where">
-    <label>Restaurants:</label>
-    <input type="text" name="restaurants">
     <label>Information About The Place</label>
-    <input type="text" id="info" name="informationAboutThePlace">
+    <textarea name="information"></textarea>
     <input type="submit" value="Add Place">
 </form>
 
