Delete Button  Commit

--- a/views/places/show.ejs
+++ b/views/places/show.ejs
@@ -10,18 +10,19 @@
 <div>Restaurants:</div>
 <ul>
   <%- place.restaurants.map(r =>
-    `<li>${r.name} ${r.rating}</li>`
+    `<li>${r.name}, ${r.rating}</li>`
   ).join('') %>
 </ul>
 </section>
 <form id="add-each-to-restaurants" action="/places/<%= place._id %>/restaurants" method="POST">
     <select name="restaurantId">
         <%- restaurants.map(r =>
-        `<option value="${r._id}">${r.name} ${r.rating}</option>`
+        `<option value="${r._id}">${r.name}, ${r.rating}</option>`
         ).join('') %> 
     </select>
     <button type="submit">Add to Restaurants</button>
 </form>
+
 
 
 
