Places and Restaurants Adding  Commit

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>  
     <nav>
-        <a href="/places" <%- title === 'All Places' ? 'class="active"' : '' %>>ALL PLACES</a>
+        <a href="/places" <%- title === 'All Places' ? 'class="active"' : '' %>>ISTANBUL PLACES</a>
         <% if (user) { %>
           <a href="/restaurants/new"	<%- title === 'New Restaurant ' ? 'class="active"' : '' %>>
           NEW RESTAURANT</a>
