--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   font-family: Helvetica;
-  color: #000000;
 }
 
 body {
@@ -28,11 +27,18 @@ nav {
   height:32px;
   font-size:14px;
   transition: all 0.2s ease-in-out;
-}
-nav:hover {
-  transform: scale(0.9);;
+  display: flex;
+  justify-content: space-between;
+
 }
 
+.link-nav{
+  color:rgb(255, 255, 255)
+}
+
+.link-nav:hover {
+  color: lightblue;
+}
 #list {
   font-weight:bold;
   color: #ffffff;
@@ -62,23 +68,41 @@ nav:hover {
   display: grid;
   grid-gap: 25px;
   grid-template-columns: repeat(2, minmax(auto, 22rem));
+  margin-left: 1000px;
 }
 
 #new-form * {
-  font-size: 20px;
+  font-size: 25px;
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 5px; 
 }
+
+.p-item{
+  color: #ffffff;
+  background-color: #292D3E;
+  border: 1px solid #1D9AF2;
+
+}
+
+.button-p:hover{
+  color:lightblue
+  }
+
+.button-p:active{
+  color:yellow
+  }
 
 #info {
   width: 300px;
   height: 200px;
 }
 
-.index, h3 {
+.index{
   display: grid;
   grid-gap: 40px;
   grid-template-columns: repeat(2, minmax(auto, 30rem));
+  font-size: 40px;
+  margin-left: 775px
 }
 
 .restaurant-add {
@@ -86,13 +110,14 @@ nav:hover {
   background-color: #292D3E;
   border: 1px solid #1D9AF2;
   border-radius: 4px;
-  padding: 15px 18px 30px 15px
   cursor: pointer;
-  height: 32px;
+  height: 35px;
   font-size: 14px;
   box-shadow: 0 0 4px #999;
   background-position: center;
   transition: background 0.8s;
+  width: 300px;
+  margin-left: 1200px;
 }
 
 .restaurant-add:hover {
@@ -100,8 +125,121 @@ nav:hover {
   color: white;
   }
 
-.restaurant-add:active{
-  background-color:#292d3e;
-  background-size: 100%;
-  transition: background 0s;
+
+#Istanbul {
+  color: white;
+  background-color:#292D3E;
+  text-align: center;
+  align-items: center;
+  margin-left: 900px;
+  width: 1000px;
+  font-size: 60px;
+  border: 1px solid #1D9AF2;
+  border-radius: 4px;
+}
+h3 {
+  color: white;
+  background-color:#292D3E;
+  text-align: center;
+  align-items: center;
+  margin-left: 1200px;
+  width: 300px;
+  font-size: 40px;
+  border: 1px solid #1D9AF2;
+  border-radius: 4px;
+}
+
+.link-detail {
+  text-decoration: none;
+  color: white;
+}
+.link-detail:hover {
+  color:lightblue
+}
+
+.button-x:hover {
+color:lightblue
+}
+.link-detail:active {
+color: yellow;
+}
+
+.button-x:active {
+  color:red
+  }
+
+.button-x {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.item {
+  display: inline-block;
+  background-color:#292D3E;
+  font-size: 18px;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 5px;
+  border: 1px solid #1D9AF2;
+  border-radius: 4px;
+}
+
+.description {
+  color: black;
+  font-size: 18px;
+  background-color: white;
+  display: inline-block;
+  border: 1px solid #000000;
+  border-radius: 4px;
+}
+
+.r-list {
+  color: black;
+  font-size: 15px;
+  background-color: white;
+  width: 220px;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  
+}
+
+.rd-list {
+  border-bottom: 2px, solid, black;
+  text-decoration: none;
+}
+
+.r-item {
+  display: inline-block;
+  font-size: 12px;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 5px;
+  
+}
+
+.button-r {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.button-r:hover {
+  color:lightblue
+  }
+
+.button-x:active {
+  color:yellow
+  }
+  
+  .rating {
+    font-weight: bold;
+  }
+
+  .r-box {
+    height: 22px;
+    font-size: 12px;
+    font-weight: bold;
   }
