--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,10 @@
           <a class="link-nav"  href="/places/new" <%- title === 'New Place' ? 'class="active"' : '' %>>NEW PLACE</a>
           <a class="link-nav"  href="/logout">LOG OUT</a>
         <% } else { %>
-          <a class="link-nav"  href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+          <div class="google-container">
+          <img id="google" src="https://i.imgur.com/FHjYyi0.png">
+          <a class="link-nav"  href="/auth/google" class="login">LOG IN&nbsp;</a>
+        </div>
         <% } %>
       </nav>
       <main>
