--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,10 +32,10 @@ nav{
   align-self: center;
 }
 
-.link-nav:hover {
+.link-nav:hover{
   color: lightblue;
 }
-#list {
+#list{
   font-weight:bold;
   color: #ffffff;
   background-color: #292D3E;
@@ -49,25 +49,25 @@ nav{
 }
 
 
-.login {
+.login{
   display: flex;
   justify-content: center;
   align-items: center;
   height: 34px;
 }
 
-.login img {
+.login img{
   height: 30px;
 }
 
-#new-form {
+#new-form{
   display: grid;
   grid-gap: 25px;
   grid-template-columns: repeat(2, minmax(auto, 22rem));
   margin-left: 1000px;
 }
 
-#new-form * {
+#new-form *{
   font-size: 25px;
   padding: 5px;
   border-radius: 5px; 
@@ -88,7 +88,7 @@ nav{
   color:yellow
   }
 
-#info {
+#info{
   width: 300px;
   height: 200px;
 }
@@ -101,7 +101,7 @@ nav{
   margin-left: 775px
 }
 
-.restaurant-add {
+.restaurant-add{
   color: #ffffff;
   background-color: #292D3E;
   border: 1px solid #1D9AF2;
@@ -116,13 +116,13 @@ nav{
   margin-left: 1200px;
 }
 
-.restaurant-add:hover {
+.restaurant-add:hover{
   background:#47a7f5 radial-gradient(circle, transparent 1%, #47a7f5 1%) center/15000%;
   color: white;
   }
 
 
-#Istanbul {
+#Istanbul{
   color: white;
   background-color:#292D3E;
   text-align: center;
@@ -133,7 +133,8 @@ nav{
   border: 1px solid #1D9AF2;
   border-radius: 4px;
 }
-h3 {
+
+h3{
   color: white;
   background-color:#292D3E;
   text-align: center;
@@ -145,31 +146,31 @@ h3 {
   border-radius: 4px;
 }
 
-.link-detail {
+.link-detail{
   text-decoration: none;
   color: white;
 }
-.link-detail:hover {
+.link-detail:hover{
   color:lightblue
 }
 
-.button-x:hover {
+.button-x:hover{
 color:lightblue
 }
-.link-detail:active {
+.link-detail:active{
 color: yellow;
 }
 
-.button-x:active {
+.button-x:active{
   color:red
   }
 
-.button-x {
+.button-x{
   font-size: 12px;
   font-weight: bold;
 }
 
-.item {
+.item{
   display: inline-block;
   background-color:#292D3E;
   font-size: 18px;
@@ -182,7 +183,7 @@ color: yellow;
   border-radius: 4px;
 }
 
-.description {
+.description{
   color: black;
   font-size: 18px;
   background-color: white;
@@ -191,7 +192,7 @@ color: yellow;
   border-radius: 4px;
 }
 
-.r-list {
+.r-list{
   color: black;
   font-size: 15px;
   background-color: white;
@@ -201,12 +202,12 @@ color: yellow;
   
 }
 
-.rd-list {
+.rd-list{
   border-bottom: 2px, solid, black;
   text-decoration: none;
 }
 
-.r-item {
+.r-item{
   display: inline-block;
   font-size: 12px;
   color: white;
@@ -217,30 +218,30 @@ color: yellow;
   
 }
 
-.button-r {
+.button-r{
   font-size: 12px;
   font-weight: bold;
 }
 
-.button-r:hover {
+.button-r:hover{
   color:lightblue
   }
 
-.button-x:active {
+.button-x:active{
   color:yellow
   }
   
-  .rating {
+  .rating{
     font-weight: bold;
   }
 
-  .r-box {
+  .r-box{
     height: 22px;
     font-size: 12px;
     font-weight: bold;
   }
 
-  #google {
+  #google{
     height: 100%;
     width: 30px
   }
@@ -251,7 +252,7 @@ color: yellow;
     gap: 10px;
   }
 
-  #r-dropdown {
+  #r-dropdown{
     padding: 6px;
     font-size: 15px;
     border: 1px solid #000000;
@@ -306,7 +307,7 @@ color: yellow;
     border-radius: 4px;
   }
 
-  #add-comment-form {
+  #add-comment-form{
     margin-bottom: 20px;
   }
 
@@ -333,3 +334,15 @@ color: yellow;
   .c-red:hover{
     background-color: red;
   }
+
+  h5{
+    background-color:#292D3E;
+    font-size: 10px;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border: 1px solid #1D9AF2;
+    border-radius: 4px;
+    display: inline-block;
+  }
+  
